# hse-atomicCounter

./: .gitignore  CMakeLists.txt  DISPROOF.md  PROOF.md  README.md  counter.cpp  counter.h  counter.hpp  genmc.sh  test.c  test.cpp  tl_random.h
cpp_impl/: CMakeLists.txt  assert.hpp  counter.cpp  counter.hpp  genmc.sh  tl_random.cpp  tl_random.hpp
md/: DISPROOF.md  PROOF.md
